fix get-started-button alignment

--- a/public/css/home.css
+++ b/public/css/home.css
@@ -505,7 +505,7 @@ header {
   width: 330px;
   background-color: aquamarine;
   padding: 20px 80px;
-  margin-left: 39%;
+  margin-inline: auto;
   margin-bottom: 160px;
   transition: all 0.5s ease;
 }
